main modified mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,14 @@
-site_name: Jonas
+site_name: Jonas Ferreira
 theme:
   name: material
+  palette: 
+    - scheme: default
+      primary: teal
+      toggle:
+        icon: material/toggle-switch-off-outline 
+        name: turn off the light
+    - scheme: slate 
+      primary: teal
+      toggle:
+        icon: material/toggle-switch
+        name: turn on the light
