--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,5 +12,10 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.x
-      - run: pip install mkdocs-material 
+      - run: pip3 install mkdocs
+      - run: pip3 install mkdocs-material
+      - run: pip3 install markdown-include
+      - run: pip3 install mkdocs-awesome-pages-plugin
+      - run: pip3 install mkdocs-material-extensions
       - run: mkdocs gh-deploy --force
+
