main deleted .github/workflows/github-pages.yml deleted 404.html deleted Gemfile deleted Gemfile.lock modified README.md deleted _config.yml deleted _posts/2022-02-25-welcome-to-jekyll.markdown deleted about.md deleted index.md modified mkdocs.yml added site/404.html added site/assets/images/favicon.png added site/assets/javascripts/bundle.8aa65030.min.js added site/assets/javascripts/bundle.8aa65030.min.js.map added site/assets/javascripts/lunr/min/lunr.ar.min.js added site/assets/javascripts/lunr/min/lunr.da.min.js added site/assets/javascripts/lunr/min/lunr.de.min.js added site/assets/javascripts/lunr/min/lunr.du.min.js added site/assets/javascripts/lunr/min/lunr.es.min.js added site/assets/javascripts/lunr/min/lunr.fi.min.js added site/assets/javascripts/lunr/min/lunr.fr.min.js added site/assets/javascripts/lunr/min/lunr.hi.min.js added site/assets/javascripts/lunr/min/lunr.hu.min.js added site/assets/javascripts/lunr/min/lunr.it.min.js added site/assets/javascripts/lunr/min/lunr.ja.min.js added site/assets/javascripts/lunr/min/lunr.jp.min.js added site/assets/javascripts/lunr/min/lunr.multi.min.js added site/assets/javascripts/lunr/min/lunr.nl.min.js added site/assets/javascripts/lunr/min/lunr.no.min.js added site/assets/javascripts/lunr/min/lunr.pt.min.js added site/assets/javascripts/lunr/min/lunr.ro.min.js added site/assets/javascripts/lunr/min/lunr.ru.min.js added site/assets/javascripts/lunr/min/lunr.stemmer.support.min.js added site/assets/javascripts/lunr/min/lunr.sv.min.js added site/assets/javascripts/lunr/min/lunr.th.min.js added site/assets/javascripts/lunr/min/lunr.tr.min.js added site/assets/javascripts/lunr/min/lunr.vi.min.js added site/assets/javascripts/lunr/min/lunr.zh.min.js added site/assets/javascripts/lunr/tinyseg.js added site/assets/javascripts/lunr/wordcut.js added site/assets/javascripts/workers/search.bd0b6b67.min.js added site/assets/javascripts/workers/search.bd0b6b67.min.js.map added site/assets/stylesheets/main.e8d9bf0c.min.css add

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,8 +3,7 @@ site_name: Jonas Ferreira
 nav:
     - Home: index.md
     - Blog: blog.md
-    - CV: cv.md
-    
+    - Novel: novel.md
 
 theme:
   name: material
