main modified requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
 markdown
 markdown-include
-
 mkdocs
+mkdocs_pymdownx_material_extras
 mkdocs-awesome-pages-plugin
 mkdocs-exclude
 mkdocs-markdownextradata-plugin
 mkdocs-material
 mkdocs-material-extensions
 mkdocs-redirects
-
+pygments
 pymdown-extensions
+mkdocs
+mkdocs-material
+mkdocs-minify-plugin
+mkdocs-git-revision-date-localized-plugin
+mkdocs-awesome-pages-plugin
