main modified docs/index.md added docs/scripts.md modified mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,9 +2,10 @@ site_name: Jonas Ferreira
 
 nav:
     - Jonas: index.md
-    - Blog: blog.md
+    - scripts: scripts.md
+#    - Blog: blog.md
 #    - Novel: novel.md
-    - CV: cv.md
+    - cv: cv.md
 
 theme:
   name: material
